# stampfig

./: README.md  pyproject.toml  stampfig.py  testing_metadata_png.ipynb
