[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stampfig"
version = "0.0.1"
authors = [
  { name="Sheila Sagear", email="ssagearastro@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]